# harness-POC-Salesforce-Agent

./: .env.example  .gitignore  Cargo.toml  Dockerfile  contexts.json  docker-compose.yml
docs/: FONTE.source  apologia_socrates_pt.txt
src/: config.rs  context_policy.rs  discord.rs  lib.rs  main.rs  salesforce.rs
src/agent/: account_intent.rs  graph.rs  guardrails.rs  llm.rs  mod.rs  rag.rs  sessions.rs
src/api/: handlers.rs  mod.rs  models.rs
src/routing/: tsp.rs
tests/: account_chat.rs  chat.rs  guardrails.rs  health.rs  rag.rs  routing.rs  sessions.rs
